--- a/zettahosting-task/src/components/shared/SearchInput/SearchInput.css
+++ b/zettahosting-task/src/components/shared/SearchInput/SearchInput.css
@@ -44,7 +44,7 @@
     }
 }
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 692px) {
     .search-input {
         width: 437px;
     }
